

option java_package = "net.api.common.proto";
option java_outer_classname = "Heartbeat";


message HeartbeatMessage {
}

  

