option java_package = "com.mrmq.poker.common.proto";
option java_outer_classname = "Rpc";


message RpcMessage {
	required int64 id = 1;
	required string version = 2;
	required string service = 3;
	optional int64 source_id = 4;
	optional bytes payloadData = 5;
	optional string payloadClass = 6;
	optional Result result = 7;
	optional string msgCode = 8;
	optional string message = 9;
  
	enum Result {
		SUCCESS = 0;
		FAIL = 1;
		INVALID_VERSION = 2;
		INVALID_SERVICE = 3;
		INVALID_PAYLOAD = 4;
		NOT_AUTHENTICATED = 5;
		SERVICE_UNAVAILABLE = 6;
		SERVICE_MAINTAIN = 8;
		INTERNAL_ERROR = 99;
	}
}